cambios e implementacion en la seguridad del proyecto

--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -30,7 +30,7 @@
 
         });
 
-        mostrarMensaje("✅ Conectado al chat del proyecto " + idProyecto);
+        mostrarMensaje(" Conectado al chat del proyecto " + idProyecto);
       });
     }
 
